--- a/PrsServer/Web.config
+++ b/PrsServer/Web.config
@@ -42,9 +42,9 @@
     </handlers>
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
+        <!--<add name="Access-Control-Allow-Origin" value="*" />
         <add name="Access-Control-Allow-Headers" value="Content-Type" />
-        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
+        <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />-->
       </customHeaders>
     </httpProtocol>  
   </system.webServer>
