Created the purchase order model and method in Vendor

--- a/PrsServer/PrsServer.csproj
+++ b/PrsServer/PrsServer.csproj
@@ -237,6 +237,7 @@
     <Compile Include="Models\Vendor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utility\JsonResponse.cs" />
+    <Compile Include="ViewModel\PurchaseOrder.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Areas\HelpPage\HelpPage.css" />
